--- a/src/Components/Services/services.css
+++ b/src/Components/Services/services.css
@@ -1,13 +1,100 @@
-.card-text{
-    font-size: 0.7rem;
+:root {
+    --orange: #02459f;
+    --darkorange: #155bb6;
+    --platinum: #e5e5e5;
+    --black: #2b2d42;
+    --white: #fff;
+    --thumb: #edf2f4;
 }
 
-.card-title{
+.custom-cards {
+    display: grid;
+    grid-auto-columns: 100%;
+    grid-column-gap: 10px;
+    grid-auto-flow: column;
+    padding: 25px 0px;
+    list-style: none;
+    overflow-x: scroll;
+    -ms-scroll-snap-type: x mandatory;
+    scroll-snap-type: x mandatory;
+}
+
+.custom-service-card {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    background: var(--white);
+    border-radius: 12px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 15%);
+    scroll-snap-align: start;
+    transition: all 0.2s;
+}
+
+.custom-service-card:hover {
+    color: var(--white);
+    background: var(--orange);
+}
+
+.custom-service-card .card-title {
     font-size: 1rem;
 }
 
-.card-pattern1{
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-image: url("../../../public/static/images/services/pattern1.png");
+.custom-service-card .card-content {
+    max-width: 100%;
+    font-size: 0.8rem;
+}
+
+.custom-service-card .card-link-wrapper {
+    margin-top: auto;
+}
+
+.custom-service-card .card-link {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    background: var(--orange);
+    padding: 6px 12px;
+    border-radius: 8px;
+}
+
+.custom-service-card:hover .card-link {
+    background: var(--darkorange);
+}
+
+.custom-cards::-webkit-scrollbar {
+    height: 12px;
+}
+
+.custom-cards::-webkit-scrollbar-thumb,
+.custom-cards::-webkit-scrollbar-track {
+    border-radius: 92px;
+}
+
+.custom-cards::-webkit-scrollbar-thumb {
+    background: var(--darkorange);
+}
+
+.custom-cards::-webkit-scrollbar-track {
+    background: var(--thumb);
+}
+
+@media (min-width: 500px) {
+    .cards {
+        grid-auto-columns: calc(50% - 10px);
+        grid-column-gap: 10px;
+    }
+}
+
+@media (min-width: 700px) {
+    .cards {
+        grid-auto-columns: calc(calc(100% / 3) - 20px);
+        grid-column-gap: 20px;
+    }
+}
+
+@media (min-width: 1100px) {
+    .cards {
+        grid-auto-columns: calc(25% - 60px);
+        grid-column-gap: 30px;
+    }
 }
